# noodles

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  common.py  decorators.py  requirements.txt  setup.py  spag.py  spag_files.py  spag_remembers.py  spag_template.py
spag/: cli.py  common.py  decorators.py  files.py  remembers.py  template.py
src/: lib.rs
src/spag/: args.rs  env.rs  file.rs  history.rs  main.rs  mod.rs  remember.rs  request.rs  template.rs  test.rs  yaml_util.rs
tests/: test-requirements.txt  test_spag.py  testapp.py
tests/resources/: auth.yml  delete_thing.yml  headers.yml
tests/resources/v2/: patch_thing.yml  post_thing.yml
tests/templates/: get_active_env.yml  get_default.yml  get_default_env.yml  headers.yml  post_thing.yml  show_params_test.yml
